test/errors/python_error/zs/api_clashing/bitmask_with_api_clash_error.zs
package api_clashing.bitmask_with_api_clash_error;

bitmask uint8 Api
{
    API_1_FEATURES,
    API_2_FEATURES,
    API_3_FEATURES
};
